--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Banner Slider Section Starts -->
 
-    <div class="container">
+    <div class="container my-5">
       <div class="row">
         <div class="col-12">
           <div
@@ -119,7 +119,7 @@
                       >
                       Shine your career learning digital skills for free at your own pace, with personalized training and more.
                       </p>
-                      <a href="#" class="btn btn-info text-black-50 fw-bold px-2 px-sm-3 py-1 font-size-12 "
+                      <a href="#" class="btn btn-info text-white  fw-bold px-2 px-sm-3 py-1 font-size-12 "
                         >Get Started</a
                       >
                     </div>
@@ -144,7 +144,7 @@
                       >
                       Shine your career learning digital skills for free at your own pace, with personalized training and more.
                       </p>
-                      <a href="#" class="btn btn-info text-black-50 fw-bold px-2 px-sm-3 py-1 font-size-12 "
+                      <a href="#" class="btn btn-info text-white  fw-bold px-2 px-sm-3 py-1 font-size-12 "
                         >Get Started</a
                       >
                     </div>
@@ -170,7 +170,7 @@
                       >
                       Shine your career learning digital skills for free at your own pace, with personalized training and more.
                       </p>
-                      <a href="#" class="btn btn-info text-black-50 fw-bold px-2 px-sm-3 py-1 font-size-12  "
+                      <a href="#" class="btn btn-info text-white fw-bold px-2 px-sm-3 py-1 font-size-12  "
                         >Get Started</a
                       >
                     </div>
@@ -213,10 +213,10 @@
 
     <!-- Course Section starts -->
 
-    <section class="my-5">
+    <section class="margin-large">
       <div class="container">
-        <div class="w-50 m-auto text-center px-lg-5 ">
-          <h2 class="px-lg-5 fw-semibold ">Discover Our Popular Courses</h2>
+        <div class="w-75 mx-auto text-center px-lg-5  mb-5 mt-5 ">
+          <h2 class="px-lg-5 mb-4 fw-semibold ">Discover Our Popular Courses</h2>
           <p class="text-black-50 ">
             Tons of courses available for students to discover their inner hunger of knowledge.
           </p>
@@ -390,7 +390,7 @@
           <div class="col">
             <!-- Blog-1 -->
             <div
-              class="d-flex gap-3 shadow-lg rounded-2 p-3 mb-3 mb-md-2 mb-lg-5 mb-xl-3 flex-md-column flex-lg-row"
+              class="d-flex gap-3 shadow-lg rounded-2 p-3 mb-3 mb-md-2 mb-lg-5 mb-xl-4 flex-md-column flex-lg-row"
             >
               <div
                 class="col-4 d-md-flex flex-lg-column col-md-12 col-lg-4 align-items-center justify-content-center border border-info rounded-3 bg-light text-center gap-md-3 gap-lg-0"
@@ -398,7 +398,7 @@
                 <h2 class="p-2">2.2K+</h2>
                 <p class="px-1 alert">Online Course</p>
               </div>
-              <article class="bg-light p-3 p-md-1">
+              <article class="bg-light p-3 p-md-1 p-lg-3">
                 <h4>Find perfect course</h4>
                 <p class="mb-0 d-inline">
                   Yes, you have seen the numbers correct. 2200 plus online courses
@@ -410,7 +410,7 @@
             </div>
             <!-- Blog-2 -->
             <div
-              class="d-flex gap-3 shadow-lg rounded-2 p-3 mb-3 mb-md-0 mb-lg-5 mb-xl-3 flex-md-column flex-lg-row"
+              class="d-flex gap-3 shadow-lg rounded-2 p-3 mb-3 mb-md-0 mb-lg-5 mb-xl-4 flex-md-column flex-lg-row"
             >
               <div
                 class="col-4 d-md-flex flex-lg-column col-md-12 col-lg-4 align-items-center justify-content-center border border-info rounded-3 bg-light text-center gap-md-3 gap-lg-0"
@@ -431,7 +431,7 @@
             <!-- blog-3 -->
             <div class="d-md-none d-lg-block">
               <div
-                class="d-flex gap-3 shadow-lg rounded-2 p-3 flex-md-column flex-lg-row"
+                class="d-flex gap-3 shadow-lg rounded-2 p-3 mb-xl-4 flex-md-column flex-lg-row"
               >
                 <div
                   class="col-4 d-md-flex flex-lg-column col-md-12 col-lg-4 align-items-center justify-content-center border border-info rounded-3 bg-light text-center gap-md-3 gap-lg-0"
@@ -783,7 +783,7 @@
           <div class="col-12 d-flex justify-content-between">
             <img src="./images/company/Group.png" alt="" class="h-50" />
             <img src="./images/company/Group1.png" alt="" class="h-50" />
-            <img src="./images/company/Vector.png" alt="" class="h-50" />
+            <img src="./images/company/company-4.png" alt="" class="h-50" />
             <img src="./images/company/Vector1.png" alt="" class="h-50" />
             <img src="./images/company/udemy-2 1.png" alt="" class="h-50" />
             <img
