--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                       </p>
                       <a
                         href="#"
-                        class="btn btn-info text-white fw-bold px-2 px-sm-3 py-1 font-size-12"
+                        class="btn btn-info text-white fw-bold px-2 px-sm-3 py-1 "
                         >Get Started</a
                       >
                     </div>
@@ -150,7 +150,7 @@
                       </p>
                       <a
                         href="#"
-                        class="btn btn-info text-white fw-bold px-2 px-sm-3 py-1 font-size-12"
+                        class="btn btn-info text-white fw-bold px-2 px-sm-3 py-1 "
                         >Get Started</a
                       >
                     </div>
@@ -179,7 +179,7 @@
                       </p>
                       <a
                         href="#"
-                        class="btn btn-info text-white fw-bold px-2 px-sm-3 py-1 font-size-12"
+                        class="btn btn-info text-white fw-bold px-2 px-sm-3 py-1"
                         >Get Started</a
                       >
                     </div>
